--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -14,9 +14,13 @@ table {
 }
 
 th, tr, td {
-  position: relative;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+th {
+  border-bottom: 1px solid #DDD;
+  /*background-color: #FFF;*/
 }
 
 td:first-child,th:first-child {
@@ -26,23 +30,33 @@ td:first-child,th:first-child {
 tr:hover {
   background-color: #f5f5f5;
   cursor: pointer;
+  border-bottom: 1px solid #DDD
 }
 
 #header-row:hover {
   background-color: #FFF;
   cursor: default;
+  border-bottom: 1px solid #DDD
 }
 
 #foot {
   margin-top: 20px;
 }
 
-#top-add {
+.top-add {
   float: right;
 }
 
-#bottom-add {
+.bottom-add {
   float: left;
+}
+
+.form-container {
+  display: none;
+  border-bottom: 1px solid #EEE;
+  width: 100%;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 #top-save {
@@ -66,4 +80,18 @@ tr:hover {
 .delete-row:hover {
   cursor: pointer;
   color: #555;
+}
+
+button:disabled{
+  background-color: #EEE;
+  border: none;
+}
+
+button:disabled:hover{
+  background-color: #EEE;
+  border: none;
+}
+
+.breadcrumb-link {
+  text-decoration: none;
 }
