fixed issue where objects and transforms were not added to POIs when added after POI already created

--- a/app/templates/new.hbs
+++ b/app/templates/new.hbs
@@ -38,6 +38,7 @@
       <input type='number' name='size'/>
       <label>Preview Image</label>
       <input type='text' name='previewImage'/>
+      <input type='hidden' name='poiID' value='{{poiID}}'/>
     </form>
     {{/if}}
 
@@ -60,6 +61,7 @@
       <input type='number' name='scale_y' placeholder='y'/>
       <input type='number' name='scale_z' placeholder='z'/>
       <input type='number' name='scale' placeholder='uniform'/>
+      <input type='hidden' name='poiID' value='{{poiID}}'/>
     </form>
     {{/if}}
 
