fixed object save pointing to object root rather than object/id

--- a/app/templates/object.hbs
+++ b/app/templates/object.hbs
@@ -14,7 +14,7 @@
       <button id="top-save" class="save-button">
             <i class="fa fa-floppy-o"></i> Save
       </button>
-    <form id='update' method="post" action="./">
+    <form id='update' method="post" action="/object/{{id}}">
       <label> ID: {{id}}</label>
       <label>Content Type</label>
       <input type='text' name='contentType' value="{{contentType}}"/>
